APP-FLUXO-CAIXA

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -35,10 +35,13 @@ $app-direction: ltr;
 
 $colors: (
   primary:    #488aff,
-  secondary:  #32db64,
-  danger:     #f53d3d,
+  secondary:  #0fc718,
+  danger:     #e90637,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  laranja:    rgb(255, 187, 0),
+  marinho:    #2152f7,
+  branco:     #ffff
 );
 
 
