--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,23 @@
 page-home {
 
+    ion-content {
+    margin-top: 20px;
+    }
+
+    .tamanho{
+        font-size: 12px;
+    }
+
+    .icons{
+        font-size: 23px;
+    }
+
+    .cor{
+        color: #000000;
+    }
+
+    p{
+        font-size: 10px !important;
+    }
+
 }
